check for debug

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <script type="text/javascript">
 
-    if (document.location.href.indexOf('localhost')){
+    if (document.location.href.indexOf('localhost') != -1){
         // debug version
         document.write('<script type="text/javascript" id="embedWellcomePlayer" src="/src/js/embed.js"><\/script>');
     } else {
