--- a/iiif.html
+++ b/iiif.html
@@ -5,35 +5,35 @@
 </head>
 <body>
 
-    <div class="wellcomePlayer" data-config="/src/examples/iiif-config.js" data-uri="/src/examples/iiif_manifest2.json" style="width:640px; height:480px; background-color: #000"></div>
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="/examples/iiif_manifest2.json" style="width:640px; height:480px; background-color: #000"></div>
 
     <br/><br/>
 
-    <div class="wellcomePlayer" data-config="/src/examples/iiif-config.js" data-uri="http://dmstech.github.io/mirador/demo/data/Walters/zp295gk6974/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://dmstech.github.io/mirador/demo/data/Walters/zp295gk6974/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
 
     <br/><br/>
 
-    <div class="wellcomePlayer" data-config="/src/examples/iiif-config.js" data-uri="http://manifests.ydc2.yale.edu/manifest/BodleianMSBodley113.json" style="width:640px; height:480px; background-color: #000"></div>
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://manifests.ydc2.yale.edu/manifest/BodleianMSBodley113.json" style="width:640px; height:480px; background-color: #000"></div>
 
     <br/><br/>
 
-    <div class="wellcomePlayer" data-config="/src/examples/iiif-config.js" data-uri="http://manifests.ydc2.yale.edu/manifest/Admont23.json" style="width:640px; height:480px; background-color: #000"></div>
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://manifests.ydc2.yale.edu/manifest/Admont23.json" style="width:640px; height:480px; background-color: #000"></div>
 
     <br/><br/>
 
-    <div class="wellcomePlayer" data-config="/src/examples/iiif-config.js" data-uri="http://manifests.ydc2.yale.edu/manifest/BeineckeMS10.json" style="width:640px; height:480px; background-color: #000"></div>
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://manifests.ydc2.yale.edu/manifest/BeineckeMS10.json" style="width:640px; height:480px; background-color: #000"></div>
 
     <script type="text/javascript">
 
-    if (document.location.href.indexOf('localhost')){
-        // debug version
-        document.write('<script type="text/javascript" id="embedWellcomePlayer" src="/src/js/embed.js"><\/script>');
-    } else {
-        // built version
-        document.write('<script type="text/javascript" id="embedWellcomePlayer" src="/build/wellcomeplayer/js/embed.js"><\/script>');
-    }
+        if (document.location.href.indexOf('localhost') != -1){
+            // debug version
+            document.write('<script type="text/javascript" id="embedWellcomePlayer" src="/src/js/embed.js"><\/script>');
+        } else {
+            // built version
+            document.write('<script type="text/javascript" id="embedWellcomePlayer" src="/build/wellcomeplayer/js/embed.js"><\/script>');
+        }
 
-</script>
+    </script>
 
 </body>
 </html>
