--- a/index.html
+++ b/index.html
@@ -3,66 +3,52 @@
 <head>
     <title>Wellcome Player: Examples</title>
 </head>
-<body>
-<!--
-<div class="wellcomePlayer" data-uri="http://wellcomelibrary.org/package/b16459532" data-sequenceindex="0" data-canvasindex="0" data-zoom="-0.2415,0,1.483,0.6973" data-config="/service/playerconfig" style="width:560px; height:420px; background-color: #000"></div>
-<script type="text/javascript" id="embedWellcomePlayer" src="http://wellcomelibrary.org/spas/player/build/wellcomeplayer/js/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>
--->
+    <body>
+    <!--
+    <div class="wellcomePlayer" data-uri="http://wellcomelibrary.org/package/b16459532" data-sequenceindex="0" data-canvasindex="0" data-zoom="-0.2415,0,1.483,0.6973" data-config="/service/playerconfig" style="width:560px; height:420px; background-color: #000"></div>
+    <script type="text/javascript" id="embedWellcomePlayer" src="http://wellcomelibrary.org/spas/player/build/wellcomeplayer/js/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>
+    -->
 
-<h2>Book</h2>
+    <h2>Book</h2>
 
-<div class="wellcomePlayer" data-config="/examples/examples-config.js" data-canvasindex="1" data-uri="http://wellcomelibrary.org/package/b18035978" style="width:640px; height:480px; background-color: #000"></div>
+    <div class="wellcomePlayer" data-config="/examples/examples-config.js" data-canvasindex="1" data-uri="http://wellcomelibrary.org/package/b18035978" style="width:640px; height:480px; background-color: #000"></div>
 
-<!--
-<div class="wellcomePlayer" data-config="../../examples/examples-config.js" data-canvasindex="1" data-uri="http://wellcomelibrary.org/package/b18035978" style="width:640px; height:480px; background-color: #000"></div>
--->
+    <h2>Letter</h2>
 
-<h2>Letter</h2>
+    <div class="wellcomePlayer" data-config="/examples/examples-config.js" data-uri="http://wellcomelibrary.org/package/b16136330" style="width:640px; height:480px; background-color: #000"></div>
 
-<div class="wellcomePlayer" data-config="/examples/examples-config.js" data-uri="http://wellcomelibrary.org/package/b16136330" style="width:640px; height:480px; background-color: #000"></div>
+    <h2>Video with Multiple Sources</h2>
 
+    <div class="wellcomePlayer" data-config="/examples/examples-config.js" data-uri="http://wellcomelibrary.org/package/b16758286" style="width:640px; height:480px; background-color: #000"></div>
 
-<h2>Video with Multiple Sources</h2>
+    <h2>Video with PDF Transcript</h2>
 
-<div class="wellcomePlayer" data-config="/examples/examples-config.js" data-uri="http://wellcomelibrary.org/package/b16758286" style="width:640px; height:480px; background-color: #000"></div>
+    <div class="wellcomePlayer" data-config="/examples/examples-config.js" data-uri="/examples/pkg.js" style="width:640px; height:480px; background-color: #000"></div>
 
-<h2>Video with PDF Transcript</h2>
+    <h2>Audio</h2>
 
-<div class="wellcomePlayer" data-config="/examples/examples-config.js" data-uri="/examples/pkg.js" style="width:640px; height:480px; background-color: #000"></div>
+    <div class="wellcomePlayer" data-config="/examples/examples-config.js" data-uri="http://wellcomelibrary.org/package/b17307922" style="width:640px; height:480px; background-color: #000"></div>
 
-<h2>Audio</h2>
+    <h2>Multiple Asset Sequences</h2>
 
-<div class="wellcomePlayer" data-config="/examples/examples-config.js" data-uri="http://wellcomelibrary.org/package/b17307922" style="width:640px; height:480px; background-color: #000"></div>
+    <div class="wellcomePlayer" data-config="/examples/examples-config.js" data-sequenceindex="1" data-uri="http://wellcomelibrary.org/package/b18031511" style="width:640px; height:480px; background-color: #000"></div>
 
-<h2>Multiple Asset Sequences</h2>
+    <h2>Artwork</h2>
 
-<div class="wellcomePlayer" data-config="/examples/examples-config.js" data-sequenceindex="1" data-uri="http://wellcomelibrary.org/package/b18031511" style="width:640px; height:480px; background-color: #000"></div>
+    <div class="wellcomePlayer" data-config="/examples/examples-config.js" data-uri="http://wellcomelibrary.org/package/b11950791" style="width:640px; height:480px; background-color: #000"></div>
 
-<h2>Artwork</h2>
+    <h2>Lightbox</h2>
 
-<div class="wellcomePlayer" data-config="/examples/examples-config.js" data-uri="http://wellcomelibrary.org/package/b11950791" style="width:640px; height:480px; background-color: #000"></div>
+    <div class="wellcomePlayer" data-config="/examples/examples-config.js" data-lightbox="true" data-uri="http://wellcomelibrary.org/package/b11950791" style="width:640px; height:457px; background-color: #000">
+        <img src="march_of_intellect.jpg" />
+    </div>
 
-<h2>Lightbox</h2>
+    <h2>PDF</h2>
 
-<div class="wellcomePlayer" data-config="/examples/examples-config.js" data-lightbox="true" data-uri="http://wellcomelibrary.org/package/b11950791" style="width:640px; height:457px; background-color: #000">
-    <img src="march_of_intellect.jpg" />
-</div>
+    <div class="wellcomePlayer" data-config="/examples/examples-config.js" data-uri="http://wellcomelibrary.org/package/b20432963" style="width:640px; height:480px; background-color: #000"></div>
 
-<h2>PDF</h2>
-
-<div class="wellcomePlayer" data-config="/examples/examples-config.js" data-uri="http://wellcomelibrary.org/package/b20432963" style="width:640px; height:480px; background-color: #000"></div>
-
-<script type="text/javascript">
-
-    if (document.location.href.indexOf('localhost') != -1){
-        // debug version
-        document.write('<script type="text/javascript" id="embedWellcomePlayer" src="/src/js/embed.js"><\/script>');
-    } else {
-        // built version
-        document.write('<script type="text/javascript" id="embedWellcomePlayer" src="/build/wellcomeplayer/js/embed.js"><\/script>');
-    }
-
-</script>
+    <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="examples.js"></script>
 
 </body>
 </html>
