--- a/iiif.html
+++ b/iiif.html
@@ -23,6 +23,7 @@
 
     <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://manifests.ydc2.yale.edu/manifest/BeineckeMS10.json" style="width:640px; height:480px; background-color: #000"></div>
 
+    <script type="text/javascript" src="jquery.js"></script>
     <script type="text/javascript" src="examples.js"></script>
 </body>
 </html>
