--- a/bl.html
+++ b/bl.html
@@ -29,7 +29,7 @@
 
     <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022601600.0x000001/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
 
+    <script type="text/javascript" src="jquery.js"></script>
     <script type="text/javascript" src="examples.js"></script>
-
 </body>
 </html>
