--- a/bl.html
+++ b/bl.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_000000028404/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
     <h2>MS Books</h2>
 
     <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_00000000020A/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
