renamed json to js

--- a/iiif.html
+++ b/iiif.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="/examples/iiif_manifest2.json" style="width:640px; height:480px; background-color: #000"></div>
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="/examples/iiif_manifest2.js" style="width:640px; height:480px; background-color: #000"></div>
 
     <br/><br/>
 
