--- a/bl.html
+++ b/bl.html
@@ -31,6 +31,66 @@
 
     <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022601600.0x000001/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
 
+    <h2>new</h2>
+
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022558384.0x000002/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
+    <br/><br/>
+
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522767.0x000002/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
+    <br/><br/>
+
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522771.0x000002/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
+    <br/><br/>
+
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522771.0x000002/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
+    <h2>Maps</h2>
+
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522756.0x000002/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
+    <br/><br/>
+
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522761.0x000002/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
+    <br/><br/>
+
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522764.0x000002/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
+    <br/><br/>
+
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522778.0x000002/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
+    <br/><br/>
+
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522782.0x000002/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
+    <br/><br/>
+
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522788.0x000002/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
+    <br/><br/>
+
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522791.0x000002/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
+    <br/><br/>
+
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522794.0x000002/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
+    <br/><br/>
+
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522797.0x000002/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
+    <br/><br/>
+
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522802.0x000002/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
+    <br/><br/>
+
+    <div class="wellcomePlayer" data-config="/examples/iiif-config.js" data-uri="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522805.0x000002/manifest.json" style="width:640px; height:480px; background-color: #000"></div>
+
     <script type="text/javascript" src="jquery.js"></script>
     <script type="text/javascript" src="examples.js"></script>
 </body>
