--- a/journal.html
+++ b/journal.html
@@ -11,7 +11,7 @@
 
     <h2>Journal</h2>
 
-    <div class="wellcomePlayer" data-config="/examples/wellcome-config.js" data-canvasindex="1" data-uri="/examples/journal.json" style="width:640px; height:480px; background-color: #000"></div>
+    <div class="wellcomePlayer" data-config="/examples/wellcome-config.js" data-canvasindex="1" data-uri="/examples/journal.js" style="width:640px; height:480px; background-color: #000"></div>
 
     <script type="text/javascript" src="jquery.js"></script>
     <script type="text/javascript" src="examples.js"></script>
