add wellcome config

--- a/books.html
+++ b/books.html
@@ -23,6 +23,16 @@
             $('.wellcomePlayer').attr('data-uri', 'http://wellcomelibrary.org/package/' + bnumber);
             initPlayers($('.wellcomePlayer'));
         });
+
+        // test overrideFullScreen option
+        $(document).bind("onToggleFullScreen", function (event, isFullScreen) {
+            console.log('full screen: ' + isFullScreen);
+        });
+
+        // test currentViewUri event
+        $(document).bind("onCurrentViewUri", function (event, uri) {
+            console.log(uri);
+        });
     });
 </script>
 
