added audio and video pickers

--- a/books.html
+++ b/books.html
@@ -7,7 +7,7 @@
 
 <div class="wellcomePlayer" data-no-load="false" data-config="/examples/examples-config.js" data-canvasindex="1" data-uri="http://wellcomelibrary.org/package/b18035978" style="width:640px; height:480px; background-color: #000"></div>
 
-<select id="books">
+<select id="options">
     <option value="b18035978">The Biocrats</option>
     <option value="b18035723">Wunder der Vererbung</option>
     <option value="b16136330">DNA</option>
@@ -15,26 +15,6 @@
 
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="examples.js"></script>
-
-<script>
-    $(function(){
-        $('#books').on('change', function(){
-            var bnumber = $('#books option:selected').val();
-            $('.wellcomePlayer').attr('data-uri', 'http://wellcomelibrary.org/package/' + bnumber);
-            initPlayers($('.wellcomePlayer'));
-        });
-
-        // test overrideFullScreen option
-        $(document).bind("onToggleFullScreen", function (event, isFullScreen) {
-            console.log('full screen: ' + isFullScreen);
-        });
-
-        // test currentViewUri event
-        $(document).bind("onCurrentViewUri", function (event, uri) {
-            console.log(uri);
-        });
-    });
-</script>
 
 </body>
 </html>
