slightly hacky, but just need to add items to options drop down now

--- a/audios.html
+++ b/audios.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<div class="wellcomePlayer" data-no-load="false" data-config="/examples/examples-config.js" data-canvasindex="1" data-uri="http://wellcomelibrary.org/package/b17307922" style="width:640px; height:480px; background-color: #000"></div>
+<div class="wellcomePlayer" data-no-load="true" data-config="/examples/examples-config.js" style="width:640px; height:480px; background-color: #000"></div>
 
 <select id="options">
     <option value="b17307922">Audio</option>
