--- a/audios.html
+++ b/audios.html
@@ -8,7 +8,8 @@
 <div class="wellcomePlayer" data-no-load="true" data-config="/examples/examples-config.js" style="width:640px; height:480px; background-color: #000"></div>
 
 <select id="options">
-    <option value="b17307922">Audio</option>
+    <option value="b17307922">Florence Nightingale</option>
+    <option value="b17307703 ">Requires Login</option>
 </select>
 
 <script type="text/javascript" src="jquery.js"></script>
