--- a/videos.html
+++ b/videos.html
@@ -9,6 +9,8 @@
 
 <select id="options">
     <option value="b16758286">Video with Multiple Sources</option>
+    <option value="b16781405">Video with transcript</option>
+    <option value="b16673104">A Day at Gebel Moya</option>
 </select>
 
 <script type="text/javascript" src="jquery.js"></script>
