--- a/pdfs.html
+++ b/pdfs.html
@@ -10,6 +10,8 @@
 <select id="options">
     <option value="b20432963">Fungal Infections</option>
     <option value="b20928129">Data Access</option>
+    <option value="b20588574">Favourite Websites</option>
+    <option value="b21321073">Final Report</option>
 </select>
 
 <script type="text/javascript" src="jquery.js"></script>
