added multiple manifestation example

--- a/books.html
+++ b/books.html
@@ -11,6 +11,7 @@
     <option value="b18035978">The Biocrats</option>
     <option value="b18035723">Wunder der Vererbung</option>
     <option value="b16136330">DNA</option>
+    <option value="b18031511">The Biological Basis of Medicine (Multiple Manifestation)</option>
 </select>
 
 <script type="text/javascript" src="jquery.js"></script>
