bl examples tidy up

--- a/bl.html
+++ b/bl.html
@@ -7,33 +7,32 @@
 
 <div class="wellcomePlayer" data-no-load="true" data-config="/examples/iiif-config.js" style="width:640px; height:480px; background-color: #000"></div>
 
-<select id="options">
+<select id="options" class="manifest">
     <optgroup label="Europeana">
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100002273023.0x000002/manifest.json">The Biocrats</option>
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022551578.0x000002/manifest.json">Wunder der Vererbung</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100002273023.0x000002/manifest.json">History of the Volunteer Movement in Cheshire, 1914-1920.</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022551578.0x000002/manifest.json">The Grey Brigade and others.</option>
     </optgroup>
     <optgroup label="Google Books">
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022570722.0x000001/manifest.json">The Biocrats</option>
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022601600.0x000001/manifest.json">Wunder der Vererbung</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022570722.0x000001/manifest.json">A Syllabus of Christian Doctrines and duties in the catechetical form, etc.</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022601600.0x000001/manifest.json">The Orders of the Court of Chancery for Upper Canada</option>
     </optgroup>
     <optgroup label="Other">
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022558384.0x000002/manifest.json">The Biocrats</option>
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522767.0x000002/manifest.json">Wunder der Vererbung</option>
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522771.0x000002/manifest.json">Wunder der Vererbung</option>
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522771.0x000002/manifest.json">Wunder der Vererbung</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022558384.0x000002/manifest.json">With the German Armies in the West</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522767.0x000002/manifest.json">Turkey in Asia. Scale, 1 : 1,500,000.</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522771.0x000002/manifest.json">[Hongrie. S.G.A. le 20/12/19. EÌchelle de 1 : 1,000,000]</option>
     </optgroup>
     <optgroup label="Maps">
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522756.0x000002/manifest.json">The Biocrats</option>
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522761.0x000002/manifest.json">Wunder der Vererbung</option>
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522764.0x000002/manifest.json">Wunder der Vererbung</option>
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522778.0x000002/manifest.json">Wunder der Vererbung</option>
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522782.0x000002/manifest.json">The Biocrats</option>
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522788.0x000002/manifest.json">Wunder der Vererbung</option>
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522791.0x000002/manifest.json">Wunder der Vererbung</option>
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522794.0x000002/manifest.json">Wunder der Vererbung</option>
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522797.0x000002/manifest.json">The Biocrats</option>
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522802.0x000002/manifest.json">Wunder der Vererbung</option>
-        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522805.0x000002/manifest.json">Wunder der Vererbung</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522756.0x000002/manifest.json">Defence of Hindenburg line. German artillery positions</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522761.0x000002/manifest.json">Diagram in perspective to illustrate control of water in water-ways area Ghent-Bruges-Ostend.</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522764.0x000002/manifest.json">[Demilitarised zones in north-west Turkey], GSGS 2943.</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522778.0x000002/manifest.json">Ethnographical map [Eastern Europe], GSGS 3703a.</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522782.0x000002/manifest.json">Ethnographical map of Austria-Hungary, GSGS 2870.</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522788.0x000002/manifest.json">[Kharitat al-dunyÄ]. A map of the world issued by the British Government</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522791.0x000002/manifest.json">Languages in Prussian Poland, NSID 15.</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522794.0x000002/manifest.json">[Religion and language maps of Lublin province, Poland], NSID 16.</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522797.0x000002/manifest.json">Map showing expansion of Prussia into the German Empire, GSGS 2858.</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522802.0x000002/manifest.json">Partitions of Poland, GSGS 2888.</option>
+        <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522805.0x000002/manifest.json">Poland : Language, NSID 18.</option>
     </optgroup>
 </select>
 
