--- a/monograph.html
+++ b/monograph.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Wellcome Player: Examples</title>
-    </head>
-    <body>
+<head>
+    <title>Wellcome Player Examples: Monograph</title>
+    <link rel="stylesheet" type="text/css" href="examples.css" />
+</head>
+<body>
 
+    <header>
+        <a href="index.html">Back</a>
+    </header>
+
+    <main>
         <div class="wellcomePlayer" data-no-load="true" data-config="/examples/examples-config.js" style="width:640px; height:480px; background-color: #000"></div>
+    </main>
 
+    <footer>
         <select id="options">
             <option value="b18035978">The Biocrats</option>
             <option value="b18035723">Wunder der Vererbung</option>
@@ -14,9 +22,10 @@
             <option value="b18031511">The Biological Basis of Medicine (Multiple Manifestation)</option>
             <option value="b11950791">The March of Intellect</option>
         </select>
+    </footer>
 
-        <script type="text/javascript" src="jquery.js"></script>
-        <script type="text/javascript" src="examples.js"></script>
+    <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="examples.js"></script>
 
-    </body>
+</body>
 </html>
