--- a/lightbox.html
+++ b/lightbox.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Wellcome Player: Examples</title>
-    </head>
-    <body>
+<head>
+    <title>Wellcome Player Examples: Lightbox</title>
+    <link rel="stylesheet" type="text/css" href="examples.css" />
+</head>
+<body>
 
+    <header>
+        <a href="index.html">Back</a>
+    </header>
+
+    <main>
         <div class="wellcomePlayer" data-config="/examples/examples-config.js" data-lightbox="true" data-uri="http://wellcomelibrary.org/package/b11950791" style="width:640px; height:457px; background-color: #000">
             <img src="march_of_intellect.jpg" />
         </div>
+    </main>
 
-        <script type="text/javascript" src="jquery.js"></script>
-        <script type="text/javascript" src="examples.js"></script>
+    <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="examples.js"></script>
 
-    </body>
+</body>
 </html>
