added localisation example

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="pdf.html">PDF</li>
         <li><a href="lightbox.html">Lightbox</li>
         <li><a href="bl.html">IIIF (British Library)</li>
+        <li><a href="localisation.html">Localisation</li>
         <!--<li><a href="journal.html">Journal</li>-->
     </ul>
 
