added ken's test

--- a/bl.html
+++ b/bl.html
@@ -25,6 +25,7 @@
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022601600.0x000001/manifest.json">The Orders of the Court of Chancery for Upper Canada</option>
             </optgroup>
             <optgroup label="Other">
+                <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Ken's Test</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022558384.0x000002/manifest.json">With the German Armies in the West</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522767.0x000002/manifest.json">Turkey in Asia. Scale, 1 : 1,500,000.</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/metadata/ark:/81055/vdc_100022522771.0x000002/manifest.json">[Hongrie. S.G.A. le 20/12/19. EÌchelle de 1 : 1,000,000]</option>
