--- a/bl.html
+++ b/bl.html
@@ -26,6 +26,7 @@
             </optgroup>
             <optgroup label="Other">
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Ken's Test</option>
+                <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Ken's 2nd Test</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022558384.0x000002/manifest.json">With the German Armies in the West</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522767.0x000002/manifest.json">Turkey in Asia. Scale, 1 : 1,500,000.</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522771.0x000002/manifest.json">[Hongrie. S.G.A. le 20/12/19. EÌchelle de 1 : 1,000,000]</option>
