added startcanvas example

--- a/bl.html
+++ b/bl.html
@@ -16,6 +16,11 @@
 
     <footer>
         <select id="options" class="manifest">
+            <optgroup label="IIIF2">
+                <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Proceedings at Peebles</option>
+                <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Pictures of Light. Three Pieces for Pianoforte.</option>
+                <option value="http://localhost:8001/examples/iiif-startcanvas.js">startcanvas</option>
+            </optgroup>
             <optgroup label="Europeana">
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100002273023.0x000002/manifest.json">History of the Volunteer Movement in Cheshire, 1914-1920.</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022551578.0x000002/manifest.json">The Grey Brigade and others.</option>
@@ -25,8 +30,6 @@
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022601600.0x000001/manifest.json">The Orders of the Court of Chancery for Upper Canada</option>
             </optgroup>
             <optgroup label="Other">
-                <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Proceedings at Peebles</option>
-                <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Pictures of Light. Three Pieces for Pianoforte.</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022558384.0x000002/manifest.json">With the German Armies in the West</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522767.0x000002/manifest.json">Turkey in Asia. Scale, 1 : 1,500,000.</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522771.0x000002/manifest.json">[Hongrie. S.G.A. le 20/12/19. EÌchelle de 1 : 1,000,000]</option>
