--- a/bl.html
+++ b/bl.html
@@ -19,7 +19,7 @@
             <optgroup label="IIIF2">
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Proceedings at Peebles</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Pictures of Light. Three Pieces for Pianoforte.</option>
-                <option value="http://localhost:8001/examples/iiif-startcanvas.js">startcanvas</option>
+                <option value="/examples/iiif-startcanvas.js">startcanvas</option>
             </optgroup>
             <optgroup label="Europeana">
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100002273023.0x000002/manifest.json">History of the Volunteer Movement in Cheshire, 1914-1920.</option>
