removed back button

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-    <header>
-        <a href="index.html">Back</a>
-    </header>
+    <!--<header>-->
+        <!--<a href="index.html">Back</a>-->
+    <!--</header>-->
 
     <main>
         <div class="wellcomePlayer" data-no-load="true" data-config="/examples/iiif-config.js" style="width:640px; height:480px; background-color: #000"></div>
