--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Proceedings at Peebles</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Pictures of Light. Three Pieces for Pianoforte.</option>
                 <option value="/examples/iiif-startcanvas.js">startcanvas</option>
+                <option value="/examples/iiif-missingimages.js">missing images</option>
             </optgroup>
             <optgroup label="Europeana">
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100002273023.0x000002/manifest.json">History of the Volunteer Movement in Cheshire, 1914-1920.</option>
