--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Pictures of Light. Three Pieces for Pianoforte.</option>
                 <option value="/examples/iiif-startcanvas.js">startcanvas</option>
                 <option value="/examples/iiif-missingimages.js">missing images</option>
+                <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000028404longtitle/manifest.json">long title</option>
+                <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/add_ms_9405/manifest.json">right to left</option>
+                <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000028404hierarchy/manifest.json">deep hierarchy</option>
             </optgroup>
             <optgroup label="Europeana">
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100002273023.0x000002/manifest.json">History of the Volunteer Movement in Cheshire, 1914-1920.</option>
