--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000028404longtitle/manifest.json">long title</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/add_ms_9405/manifest.json">right to left</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000028404hierarchy/manifest.json">deep hierarchy</option>
+                <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000028404deephierarchy/manifest.json">deep hierarchy 2</option>
             </optgroup>
             <optgroup label="Europeana">
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100002273023.0x000002/manifest.json">History of the Volunteer Movement in Cheshire, 1914-1920.</option>
