--- a/iiif2.html
+++ b/iiif2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Wellcome Player: Examples</title>
+    <title>British Library Universal Viewer Examples:  Examples</title>
 </head>
 <body>
 
-    <div class="wellcomePlayer" data-no-load="true" data-config="/examples/iiif-config.js" style="width:640px; height:480px; background-color: #000"></div>
+    <div class="uv" data-no-load="true" data-config="/examples/iiif-config.js" style="width:640px; height:480px; background-color: #000"></div>
 
     <select id="options" class="manifest">
         <option value="http://iiif.io/api/presentation/2.0/example/fixtures/1/manifest.json">Test 1 Manifest: Minimum Required Fields</option>
