--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Universal Viewer Examples: British Library</title>
+    <title>British Library Universal Viewer Examples</title>
     <link rel="stylesheet" href="lib/foundation/css/foundation.css" />
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="examples.css" />
@@ -13,7 +13,7 @@
     </header>
 
     <main>
-        <div class="wellcomePlayer" data-no-load="true" data-config="/examples/default-config.js" style="width:640px; height:480px; background-color: #000"></div>
+        <div class="uv" data-no-load="true" data-config="/examples/default-config.js" style="width:640px; height:480px; background-color: #000"></div>
     </main>
 
     <footer>
