--- a/journal.html
+++ b/journal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Wellcome Player Examples: Journal</title>
+    <title>British Library Universal Viewer Examples: Journal</title>
     <link rel="stylesheet" type="text/css" href="examples.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
     </header>
 
     <main>
-        <div class="wellcomePlayer" data-config="/examples/examples-config.js" data-canvasindex="1" data-uri="/examples/journal.js" style="width:640px; height:480px; background-color: #000"></div>
+        <div class="uv" data-config="/examples/examples-config.js" data-canvasindex="1" data-uri="/examples/journal.js" style="width:640px; height:480px; background-color: #000"></div>
     </main>
 
     <script type="text/javascript" src="jquery.js"></script>
