--- a/_index.html
+++ b/_index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Wellcome Player Examples</title>
+    <title>British Library Universal Viewer Examples</title>
     <link rel="stylesheet" type="text/css" href="examples.css" />
 </head>
 <body>
