--- a/embedded.html
+++ b/embedded.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Wellcome Player: Embedded</title>
+    <title>British Library Universal Viewer Examples:  Embedded</title>
 </head>
 <body>
 
 <h2>Embedded</h2>
 
-<div class="wellcomePlayer" data-uri="http://wellcomelibrary.org/package/b17997744" data-assetsequenceindex="0" data-assetindex="14" data-zoom="-1.0294,0,3.0588,1.5518" style="width:560px; height:420px; background-color: #000"></div>
+<div class="uv" data-uri="http://wellcomelibrary.org/package/b17997744" data-assetsequenceindex="0" data-assetindex="14" data-zoom="-1.0294,0,3.0588,1.5518" style="width:560px; height:420px; background-color: #000"></div>
 
-<script type="text/javascript" id="embedWellcomePlayer" src="http://wellcomelibrary.org/spas/player/build/uv/js/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>
+<script type="text/javascript" id="embedUV" src="http://wellcomelibrary.org/spas/player/build/uv/js/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>
 
 </body>
 </html>
