--- a/lightbox.html
+++ b/lightbox.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Wellcome Player Examples: Lightbox</title>
+    <title>British Library Universal Viewer Examples: Lightbox</title>
     <link rel="stylesheet" type="text/css" href="examples.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
     </header>
 
     <main>
-        <div class="wellcomePlayer" data-config="/examples/examples-config.js" data-lightbox="true" data-uri="http://wellcomelibrary.org/package/b11950791" style="width:640px; height:457px; background-color: #000">
+        <div class="uv" data-config="/examples/examples-config.js" data-lightbox="true" data-uri="http://wellcomelibrary.org/package/b11950791" style="width:640px; height:457px; background-color: #000">
             <img src="march_of_intellect.jpg" />
         </div>
     </main>
