--- a/pdf.html
+++ b/pdf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Wellcome Player: Examples</title>
+    <title>British Library Universal Viewer Examples:  Examples</title>
     <link rel="stylesheet" type="text/css" href="examples.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
     </header>
 
     <main>
-        <div class="wellcomePlayer" data-no-load="true" data-config="/examples/examples-config.js" style="width:640px; height:480px; background-color: #000"></div>
+        <div class="uv" data-no-load="true" data-config="/examples/examples-config.js" style="width:640px; height:480px; background-color: #000"></div>
     </main>
 
     <footer>
