disable editor in IE8

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <option value="/examples/config/cy-GB-config.js">Welsh</option>
         </select>
 
-        <ul class="button-group">
+        <ul id="edit-config" class="button-group">
             <li><a id="editBtn" href="#" class="button">Edit</a></li>
             <li><a id="saveBtn" href="#" class="button hide">Save</a></li>
         </ul>
@@ -81,7 +81,6 @@
 
     <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="lib/json-editor/dist/jsoneditor.js"></script>
-    <script type="text/javascript" src="lib/foundation/js/foundation.js"></script>
     <script type="text/javascript" src="plugins.js"></script>
     <script type="text/javascript" src="utils.js"></script>
     <script type="text/javascript" src="examples.js"></script>
