--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <optgroup label="IIIF2">
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Proceedings at Peebles</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Pictures of Light. Three Pieces for Pianoforte.</option>
+				<option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/or_16753/manifest.json">Sutras (Top to bottom)</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000028404Missing/manifest.json">missing images</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000028404longtitle/manifest.json">long title</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/add_ms_9405/manifest.json">right to left</option>
