--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <footer>
 
-        <h3>Test Manifest 1</h3>
+        <h3>Test Manifest</h3>
 
         <select id="manifest">
             <optgroup label="IIIF2">
