--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,7 @@
 
 
     <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="lib/json-editor/dist/jsoneditor.js"></script>
+    <!--<script type="text/javascript" src="lib/json-editor/dist/jsoneditor.js"></script>-->
     <script type="text/javascript" src="lib/foundation/js/foundation.js"></script>
     <script type="text/javascript" src="plugins.js"></script>
     <script type="text/javascript" src="utils.js"></script>
