--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 
     </main>
 
-    <footer>
-
-        <h3>Test Manifest</h3>
+    <footer style="display:none;">
 
         <select id="manifest">
             <optgroup label="IIIF2">
