--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </footer>
 
     <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="lib/json-editor/dist/jsoneditor.js"></script>
+ <!--    <script type="text/javascript" src="lib/json-editor/dist/jsoneditor.js"></script> -->
     <script type="text/javascript" src="lib/foundation/js/foundation.js"></script>
     <script type="text/javascript" src="plugins.js"></script>
     <script type="text/javascript" src="utils.js"></script>
