--- a/noeditor.html
+++ b/noeditor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>British Library Universal Viewer Examples</title>
+    <title>Universal Viewer Examples</title>
     <link rel="stylesheet" href="lib/foundation/css/foundation.css" />
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="examples.css" />
