--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 		
         <div style="width:640px; height:480px; margin-left: 20px; float: left">
             <p>Please click on one of the titles below to view the corresponding item within the Universal Viewer.</p>
-            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Proceedings at Peebles</a><span> - a standard left-to-right publication (displayed by default)</span><br />
-            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Pictures of Light</a><span> - a music manuscript subtitled 'Three Pieces for Pianoforte'</span><br />
-            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100002273023.0x000002/manifest.json">History of the Volunteer Movement in Cheshire, 1914-1920.</a><span></span><br />
-            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522761.0x000002/manifest.json">Diagram in perspective to illustrate control of water in water-ways area Ghent-Bruges-Ostend.</a><span></span><br />
-            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/or_16753/manifest.json">Sutras</a><span> - a top-to-bottom Thai manuscript</span><br />
+            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Proceedings at Peebles</a><br />
+            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Pictures of Light</a><br />
+            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100002273023.0x000002/manifest.json">History of the Volunteer Movement in Cheshire, 1914-1920.</a>><br />
+            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522761.0x000002/manifest.json">Diagram in perspective to illustrate control of water in Ghent-Bruges-Ostend.</a><br />
+            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522778.0x000002/manifest.json">Ethnographical map [Eastern Europe], GSGS 3703a.</a><br />
         </div>
 
     </main>
