--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
     <main>
         <div style="width:1300px; height:100px; background-color: #EEE; text-align: center">
             <img src="BL Logo.jpg" style="float: left" />
-            <span style="font-size: 36px; line-height: 1; position: relative; top: 32px">Universal Viewer Usability Testing</span>
+            <!--<span style="font-size: 36px; line-height: 1; position: relative; top: 32px">Universal Viewer Usability Testing</span>-->
         </div><br />
 
-        <div class="uv" data-no-load="true" data-config="/examples/config/default-config.js" style="width:640px; height:480px; background-color: #000; float: left"></div>
+        <div class="uv" data-no-load="true" data-config="/examples/config/default-config.js" style="width:640px; height:480px; background-color: #000"></div>
 		
-        <div style="width:640px; height:480px; margin-left: 20px; float: left">
-            <p>Please click on one of the titles below to view the corresponding item within the Universal Viewer.</p>
+        <div style="width:640px; height:480px; margin-left: 20px">
             <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Proceedings at Peebles</a><br /><br />
             <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Pictures of Light</a><br /><br />
             <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100002273023.0x000002/manifest.json">History of the Volunteer Movement in Cheshire, 1914-1920.</a><br /><br />
