--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                 <option value="http://dms-data.stanford.edu/data/manifests/McLaughlin/bc788vp3448/manifest.json">California as Island</option>
                 <option value="http://dms-data.stanford.edu/data/manifests/kn/mw497gz1295/manifest.json">Japanese Songbook</option>
             </optgroup>
+            <optgroup label="National Library of Wales">
+                <option value="/examples/manifest/translations.js">Translations</option>
+            </optgroup>
             <optgroup label="British Library">
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Proceedings at Peebles</option>
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Pictures of Light. Three Pieces for Pianoforte.</option>
@@ -77,9 +80,10 @@
             </optgroup>
         </select>
 
-        <h3>Config</h3>
+        <h3>Locale</h3>
 
-        <select id="config">
+        <!-- todo: set data-locale attribute. load the build/js/en-GB.config.js to get a list of locales -->
+        <select id="locale">
             <option value="/examples/config/default-config.js">Default</option>
             <option value="/examples/config/cy-GB-config.js">Welsh</option>
         </select>
