added cardigan constabulary example

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <option value="http://dms-data.stanford.edu/data/manifests/kn/mw497gz1295/manifest.json">Japanese Songbook</option>
             </optgroup>
             <optgroup label="National Library of Wales">
+                <option value="http://dams.llgc.org.uk/iiif/2.0/4389767/manifest.json">Cardiganshire Constabulary</option>
                 <option value="/examples/manifest/translations.js">Translations</option>
             </optgroup>
             <optgroup label="British Library">
