--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <main>
-        <div class="uv" data-no-load="true" data-config="/examples/config/default-config.js" style="width:640px; height:480px; background-color: #000"></div>
+        <div class="uv" data-no-load="true" style="width:640px; height:480px; background-color: #000"></div>
     </main>
 
     <footer>
@@ -83,11 +83,11 @@
 
         <h3>Locale</h3>
 
-        <!-- todo: set data-locale attribute. load the build/js/en-GB.config.js to get a list of locales -->
         <select id="locale">
-            <option value="/examples/config/default-config.js">Default</option>
-            <option value="/examples/config/cy-GB-config.js">Welsh</option>
+
         </select>
+
+        <h3>Config</h3>
 
         <ul id="edit-config" class="button-group">
             <li><a id="editBtn" href="#" class="button">Edit</a></li>
