--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <ul id="edit-config" class="button-group">
             <li><a id="editBtn" href="#" class="button">Edit</a></li>
             <li><a id="saveBtn" href="#" class="button hide">Save</a></li>
+            <li><a id="resetBtn" href="#" class="button hide">Reset</a></li>
         </ul>
 
         <div id="editPnl" class="hide">
