--- a/index.html
+++ b/index.html
@@ -83,11 +83,15 @@
 
         <h3>Locale</h3>
 
+        <p>Test setting the data-locale attribute on the embedding div.</p>
+
         <select id="locale">
 
         </select>
 
         <h3>Config</h3>
+
+        <p>Changes to config made with this tool are at the session level and not persisted.</p>
 
         <ul id="edit-config" class="button-group">
             <li><a id="editBtn" href="#" class="button">Edit</a></li>
