added wellcome examples

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <h3>Manifest</h3>
 
         <select id="manifest">
+            <optgroup label="Wellcome Library">
+                <option value="http://wellcomelibrary.org/iiif/b18035978/manifest">The Biocrats</option>
+                <option value="http://wellcomelibrary.org/iiif/b19684915/manifest">Wellcome Apocalypse</option>
+                <option value="http://wellcomelibrary.org/iiif/b22674883/manifest">Harris's ladies</option>
+                <option value="http://wellcomelibrary.org/iiif/b1948799x/manifest">Crick's letter</option>
+            </optgroup>
             <optgroup label="Stanford University">
                 <option value="http://dms-data.stanford.edu/data/manifests/RomanCoins/bb853kn3021/manifest.json">Roman Coins</option>
                 <option value="http://dms-data.stanford.edu/data/manifests/McLaughlin/bc788vp3448/manifest.json">California as Island</option>
