--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 		
         <div style="width:640px; height:480px; margin-left: 20px">
-            <a href="?manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Proceedings at Peebles</a><br /><br />
-            <a href="?manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Pictures of Light</a><br /><br />
-            <a href="?manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100002273023.0x000002/manifest.json">History of the Volunteer Movement in Cheshire, 1914-1920.</a><br /><br />
-            <a href="?manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022551578.0x000002/manifest.json">The Grey Brigade and others.</a><br /><br />
-            <a href="?manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522761.0x000002/manifest.json">Diagram in perspective to illustrate control of water in Ghent-Bruges-Ostend.</a><br /><br />
-            <a href="?manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522778.0x000002/manifest.json">Ethnographical map [Eastern Europe], GSGS 3703a.</a><br /><br />
-            <a href="?manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522782.0x000002/manifest.json">Ethnographical map of Austria-Hungary, GSGS 2870.</a><br /><br />
+            <a href="?jsonp=true&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Proceedings at Peebles</a><br /><br />
+            <a href="?jsonp=true&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Pictures of Light</a><br /><br />
+            <a href="?jsonp=true&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100002273023.0x000002/manifest.json">History of the Volunteer Movement in Cheshire, 1914-1920.</a><br /><br />
+            <a href="?jsonp=true&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022551578.0x000002/manifest.json">The Grey Brigade and others.</a><br /><br />
+            <a href="?jsonp=true&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522761.0x000002/manifest.json">Diagram in perspective to illustrate control of water in Ghent-Bruges-Ostend.</a><br /><br />
+            <a href="?jsonp=true&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522778.0x000002/manifest.json">Ethnographical map [Eastern Europe], GSGS 3703a.</a><br /><br />
+            <a href="?jsonp=true&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522782.0x000002/manifest.json">Ethnographical map of Austria-Hungary, GSGS 2870.</a><br /><br />
         </div>
 
     </main>
