added jsonp note

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
         <div>
             <input id="jsonp" type="checkbox"><label for="jsonp">JSONP</label>
+            <p>Forces the viewer to use JSONP to load manifests and info.json. Default behaviour is to use JSONP for IE<10</p>
         </div>
 
         <h3>Manifest</h3>
