use config.name to load data

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="uv" data-no-load="true" style="width:640px; height:480px; background-color: #000"></div>
     </main>
 
-    <footer>
+    <footer style="display: none">
 
         <h3>Options</h3>
 
