--- a/noeditor.html
+++ b/noeditor.html
@@ -86,6 +86,7 @@
     <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="plugins.js"></script>
     <script type="text/javascript" src="utils.js"></script>
+    <script type="text/javascript" src="testids.js"></script>
     <script type="text/javascript" src="examples.js"></script>
 
 </body>
