added locales priority

--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
 
         </select>
 
+        <p>Set locale precedence and label e.g. en-GB:English,cy-GB:Welsh</p>
+
+        <input id="locales" type="text" value="" />
+
+        <a id="setLocalesBtn" class="button">Set</a>
+
         <h3>Config</h3>
 
         <p>Changes to config made with this tool are at the session level and not persisted.</p>
