--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="lib/foundation/css/foundation.css" />
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="examples.css" />
-    <script type="text/javascript" id="embedUV" src="/src/js/embed.js"></script>
+    <!--<script type="text/javascript" id="embedUV" src="/src/js/embed.js"></script>-->
 </head>
 <body>
 
