--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <p>Forces the viewer to use JSONP to load manifests and info.json. Default behaviour is to use JSONP for IE<10.</p>
         </div>
 
-        <div>
-            <input id="testids" type="checkbox"><label for="testids">Test Ids</label>
-            <p>Adds unique ids to viewer buttons for testing convenience.</p>
-        </div>
+        <!--<div>-->
+            <!--<input id="testids" type="checkbox"><label for="testids">Test Ids</label>-->
+            <!--<p>Adds unique ids to viewer buttons for testing convenience.</p>-->
+        <!--</div>-->
 
         <div>
             <input id="defaultToFullScreen" type="checkbox"><label for="defaultToFullScreen">Default to Full Screen</label>
