manifest free text input

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <h3>Manifest</h3>
 
-        <select id="manifest">
+        <select id="manifestSelect">
             <optgroup label="Wellcome Library">
                 <option value="http://wellcomelibrary.org/iiif/b18035978/manifest">The Biocrats</option>
                 <option value="http://wellcomelibrary.org/iiif/b19684915/manifest">Wellcome Apocalypse</option>
@@ -100,6 +100,10 @@
                 <option value="http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522771.0x000002/manifest.json">[Hongrie. S.G.A. le 20/12/19. EÌchelle de 1 : 1,000,000]</option>
             </optgroup>
         </select>
+
+        <input id="manifest" type="text" value="" />
+
+        <a id="setManifestBtn" class="button">Set</a>
 
         <h3>Locale</h3>
 
